syntax = "proto3";
package rollkit;

option go_package = "github.com/rollkit/rollkit/types/pb/rollkit";

message State {
  string chain_id = 2;
  uint64 initial_height = 3;

  uint64 last_block_height = 4;

  uint64 da_height = 5 ;
}
